# transpact

./: .gitignore  README.md  d  package-lock.json  package.json  tsconfig.json
Documents/: links.txt
app/: .env  .env.example  .gitignore  ProductWorkflow.md  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/app/: package-lock.json  package.json
app/contract/: Cargo.toml
app/contract/src/: ContractListing.rs  ContractorRegistry.rs  Entity.rs  Response.rs  UserRoleContract.rs
app/prisma/: schema.prisma
app/src/: env.mjs  middleware.ts
app/types/: api.d.ts  models.d.ts
contract/: Cargo.toml  deploy.sh  package-lock.json
contract/neardev/: dev-account  dev-account.env
contract/src/: ContractorRegistry (1).rs  ContractorRegistry.rs  Entity.rs  Types.rs  bidding_contract.rs  custodial_wallet.js  lib.rs  temp.rs
frontend/: .gitignore  App.js  App.tsx  components.json  index.html  index.js  near-wallet.js  near-wallet.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  ui-components.js
frontend/.parcel-cache/: 40ddeda4a7a72709.txt  a384f0ec43b99fbc  c300a161f5844384  f827e36c1bc8e59f  lock.mdb
frontend/components/: icons.tsx  main-nav.tsx  mobile-nav.tsx  nav.tsx  site-footer.tsx  user-account-nav.tsx
frontend/config/: dashboard.ts  marketing.ts  site.ts
frontend/context/: contract-context.ts  wallet-context.ts
frontend/lib/: utils.ts
frontend/pages/: all-bids.tsx  bidder-dashboard.tsx  home.tsx  (+5 more)
integration-tests/: package-lock.json
prisma/: schema.prisma
(+150 files in other folders)
